objects/User.object
<CustomObject>
    <fields>
        <fullName>Theatre__c</fullName>
        <inlineHelpText>Please contact GSTS Support to Edit this field</inlineHelpText>
        <label>Theater</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas-Canada</fullName>
                </value>
                <value>
                    <fullName>Americas-Global Enterprise Segment</fullName>
                </value>
                <value>
                    <fullName>Americas-LATAM</fullName>
                </value>
                <value>
                    <fullName>Americas-US Commercial</fullName>
                </value>
                <value>
                    <fullName>Americas-US Public Sector</fullName>
                </value>
                <value>
                    <fullName>APJC-APAC</fullName>
                </value>
                <value>
                    <fullName>APJC-Greater China</fullName>
                </value>
                <value>
                    <fullName>APJC-Japan</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>Global Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Category__c</fullName>
        <description>User Category used in reports</description>
        <label>User Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Deactivation_Comments__c</fullName>
        <description>User Deactivation Comments by automated process</description>
        <label>User Deactivation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Deactivation_Date__c</fullName>
        <description>User Deactivation Date by automated process</description>
        <label>User Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Id_18__c</fullName>
        <description>18 digit user id</description>
        <formula>CASESAFEID(Id)</formula>
        <label>User Id 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Number__c</fullName>
        <description>Created to give a no to user</description>
        <label>User Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>User_Territory__c</fullName>
        <label>User Territory</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Unique__c</fullName>
        <description>Field is used to generate unique user counts on various reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>SP-Incumbent</fullName>
                </value>
                <value>
                    <fullName>SP-Challenger</fullName>
                </value>
                <value>
                    <fullName>SP-Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>SU_ORG_ADMIN_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cisco_Sales</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>SU_ORG_ADMIN_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <label>Cisco Sales</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EULA</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>dsfs__DSProSFUsername__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deployment_No__c</field>
            <operation>equals</operation>
            <value>EULA</value>
        </filters>
        <label>EULA</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GS</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deployment_No__c</field>
            <operation>equals</operation>
            <value>GS</value>
        </filters>
        <label>GS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GSSO_Americas_Management_Users</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <columns>Reporting_Manager_Level_1_cec__c</columns>
        <columns>Reporting_Manager_Level_2_cec__c</columns>
        <columns>Reporting_Manager_Level_3_cec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Manager_Level_1_cec__c</field>
            <operation>equals</operation>
            <value>martwebe,jcolumbu</value>
        </filters>
        <filters>
            <field>Reporting_Manager_Level_2_cec__c</field>
            <operation>equals</operation>
            <value>martwebe,jcolumbu</value>
        </filters>
        <filters>
            <field>Reporting_Manager_Level_1_cec__c</field>
            <operation>notEqual</operation>
            <value>FASIRAJ,AETMAN,LSENECAL,MARBEZER</value>
        </filters>
        <label>GSSO Americas Management Users</label>
        <language>en_US</language>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>GSSO_Users_Active</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Group__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>Reporting_Manager_Level_1_cec__c</columns>
        <columns>Reporting_Manager_Level_2_cec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Up_Manager_Chain__c</field>
            <operation>contains</operation>
            <value>djustice</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>GSSO Users - Active</label>
        <language>en_US</language>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>GSSO_Users_Active_with_DocuSign</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Group__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>Reporting_Manager_Level_1_cec__c</columns>
        <columns>Reporting_Manager_Level_2_cec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Up_Manager_Chain__c</field>
            <operation>contains</operation>
            <value>djustice</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>GSSO Users - Active with DocuSign</label>
        <language>en_US</language>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>GSSO_Users_Active_without_DocuSign</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Group__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>Reporting_Manager_Level_1_cec__c</columns>
        <columns>Reporting_Manager_Level_2_cec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Up_Manager_Chain__c</field>
            <operation>contains</operation>
            <value>djustice</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <label>GSSO Users - Active w/o DocuSign</label>
        <language>en_US</language>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>GSSO_Users_Inactive</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Group__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>Reporting_Manager_Level_1_cec__c</columns>
        <columns>Reporting_Manager_Level_2_cec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Up_Manager_Chain__c</field>
            <operation>contains</operation>
            <value>jonegron</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>GSSO Users - Inactive</label>
        <language>en_US</language>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>GSSO_Users_with_Login_Acces</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Group__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Up_Manager_Chain__c</field>
            <operation>contains</operation>
            <value>djustice</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SU_ORG_ADMIN_EXPIRATION</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>GSSO Users with Login Access</label>
        <language>en_US</language>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>HDF_Users_with_No_Role_Set</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Additional_User_Permissions__c</field>
            <operation>includes</operation>
            <value>GSSO HD Forecast User</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>HDF Users with No Role Set</label>
        <language>en_US</language>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Log_in_Access_ACCOUNT_MANAGER</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>SU_ORG_ADMIN_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SU_ORG_ADMIN_EXPIRATION</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>contains</operation>
            <value>ACCOUNT MANAGER</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Cisco_Sales</value>
        </filters>
        <label>Log in Access ACCOUNT MANAGER</label>
        <language>en_US</language>
        <sharedTo>
            <group>Americas_GTM_Enablement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Log_in_Access_Modified</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>SU_ORG_ADMIN_EXPIRATION</columns>
        <columns>Additional_User_Permissions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SU_ORG_ADMIN_EXPIRATION</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Log in Access Modified</label>
        <language>en_US</language>
        <sharedTo>
            <group>Americas_GTM_Enablement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SEActiveUsers</fullName>
        <booleanFilter>1 and (2 or 3) and 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Theatre__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SU_ACCESS_EXPIRATION</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>SU_ORG_ADMIN_EXPIRATION</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Additional_User_Permissions__c</field>
            <operation>includes</operation>
            <value>SE User</value>
        </filters>
        <label>SE Active Users with Login access</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US_Commercial_Log_in</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Theatre__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>SU_ORG_ADMIN_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SU_ORG_ADMIN_EXPIRATION</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Theatre__c</field>
            <operation>equals</operation>
            <value>APJC-Greater China</value>
        </filters>
        <label>t</label>
        <language>en_US</language>
        <sharedTo>
            <group>Americas_GTM_Enablement</group>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Invalid_Profile</fullName>
        <active>true</active>
        <description>Invalid_Profile</description>
        <errorConditionFormula>ProfileId = '00e30000000dV6c'</errorConditionFormula>
        <errorDisplayField>ProfileId</errorDisplayField>
        <errorMessage>Invalid Profile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OOO_End_Date_Validation</fullName>
        <active>true</active>
        <description>OOO End Date validation cannot be earlier than start time</description>
        <errorConditionFormula>(
 $Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_GSTS_Analyst__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c
)
 &amp;&amp; 

( NOT(ISNULL(Out_Of_Office_End_Time__c))

   &amp;&amp;

   Out_Of_Office_End_Time__c &lt; Out_Of_Office_Start_Time__c
)</errorConditionFormula>
        <errorDisplayField>Out_Of_Office_End_Time__c</errorDisplayField>
        <errorMessage>Out Of Office End time cannot be earlier than start time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OOO_Start_Date_Validation</fullName>
        <active>true</active>
        <description>OOO Start Date cannot be earlier than today</description>
        <errorConditionFormula>(
 $Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_GSTS_Analyst__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c

)
 &amp;&amp; 

( NOT(ISNULL(Out_Of_Office_Start_Time__c))

   &amp;&amp;

   DATEVALUE(Out_Of_Office_Start_Time__c) &lt; Today()
)</errorConditionFormula>
        <errorDisplayField>Out_Of_Office_Start_Time__c</errorDisplayField>
        <errorMessage>Out Of Office Start time cannot be earlier than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OOO_Start_End_Date_Validation_Null_Check</fullName>
        <active>true</active>
        <description>OOO Start/End Date is required</description>
        <errorConditionFormula>(
 $Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_GSTS_Analyst__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c

)
 &amp;&amp; 
(
 ( NOT(ISNULL(Out_Of_Office_Start_Time__c))
   &amp;&amp;
   ISNULL(Out_Of_Office_End_Time__c)
 )
||

 ( NOT(ISNULL(Out_Of_Office_End_Time__c))
   &amp;&amp;
   ISNULL(Out_Of_Office_Start_Time__c)
 )
)</errorConditionFormula>
        <errorMessage>Out Of Office Start/End Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Admin_Profile_Assignment</fullName>
        <active>false</active>
        <description>Don't change or deactivate this Validation</description>
        <errorConditionFormula>ISCHANGED(ProfileId)&amp;&amp; 
( 
ProfileId = $Setup.ProfileID__c.Cisco_ADMIN__c 
) 
&amp;&amp; 
( 
$User.Id !="00534000008oVAi"  
)</errorConditionFormula>
        <errorDisplayField>ProfileId</errorDisplayField>
        <errorMessage>Need Director Approval for Change profile to Admin</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_nonsupport_granting_admin_access</fullName>
        <active>true</active>
        <description>Prevent nonsupport users from granting admin access</description>
        <errorConditionFormula>ISCHANGED(ProfileId)&amp;&amp;
  
(
ProfileId = $Setup.ProfileID__c.Cisco_ADMIN__c ||
ProfileId = $Setup.ProfileID__c.Cisco_Data_Migration__c ||
ProfileId = $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c ||
ProfileId = $Setup.ProfileID__c.Cisco_GSTS__c ||
ProfileId = $Setup.ProfileID__c.Cisco_GSTS_Analyst__c ||
ProfileId = $Setup.ProfileID__c.Cisco_Worldwide_Read_Only__c ||
ProfileId = $Setup.ProfileID__c.Cisco_Deployment_Support__c 
)

&amp;&amp;
(
$User.ProfileId != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; 
$User.ProfileId != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
$User.ProfileId != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c &amp;&amp; 
$User.ProfileId != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp; 
$User.ProfileId != $Setup.ProfileID__c.Cisco_GSTS_Analyst__c)</errorConditionFormula>
        <errorDisplayField>ProfileId</errorDisplayField>
        <errorMessage>Global Read/Write Proxy Access to Salesforce.com requires Director Approval. 

Please open a case with GSTS support  at srm.cisco.com.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_users_granting_admin_access</fullName>
        <active>true</active>
        <description>Prevent nonsupport users from granting admin access</description>
        <errorConditionFormula>ISCHANGED(ProfileId)
&amp;&amp; 
ProfileId = $Setup.ProfileID__c.Cisco_ADMIN__c 
&amp;&amp;
$User.ProfileId != $Setup.ProfileID__c.Cisco_ADMIN__c</errorConditionFormula>
        <errorDisplayField>ProfileId</errorDisplayField>
        <errorMessage>YOU ARE NOT AUTHORIZED TO CHANGE PROFILE TO ADMIN</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Theater_Check</fullName>
        <active>true</active>
        <description>Check if theater is valid</description>
        <errorConditionFormula>ISNEW() &amp;&amp; 

 $User.Id != '005300000010pIr' &amp;&amp;
( 
TEXT(Theatre__c)='' || 
(


TEXT(Theatre__c)!='APJC-APAC' &amp;&amp; 
TEXT(Theatre__c)!='APJC-JAPAN' &amp;&amp; 
TEXT(Theatre__c)!='APJC-Greater China' &amp;&amp; 
TEXT(Theatre__c)!='EMEAR' &amp;&amp; 
TEXT(Theatre__c)!='Global Service Provider' &amp;&amp; 
TEXT(Theatre__c)!='Americas-LATAM' &amp;&amp; 
TEXT(Theatre__c)!='Americas-Global Enterprise Segment' &amp;&amp;
TEXT(Theatre__c)!='Americas-US Commercial' &amp;&amp; 
TEXT(Theatre__c)!='Americas-Canada' &amp;&amp; 
TEXT(Theatre__c)!='Americas-US Public Sector')
)</errorConditionFormula>
        <errorDisplayField>Theatre__c</errorDisplayField>
        <errorMessage>Please select a valid Theater</errorMessage>
    </validationRules>
</CustomObject>